feat(Factory app): ++ Implement services Appointment,Entity Schedule add, with all ecosystem