@@ -1,28 +1,32 @@
 package com.santt4na.health_check.service.impl;
 
 import com.santt4na.health_check.Startup;
+import com.santt4na.health_check.dto.scheduleDTO.ScheduleResponseDTO;
 import com.santt4na.health_check.dto.appointmentDTO.AppointmentRequestDTO;
 import com.santt4na.health_check.dto.appointmentDTO.AppointmentResponseDTO;
+import com.santt4na.health_check.dto.appointmentDTO.AppointmentUpdateDTO;
 import com.santt4na.health_check.entity.Appointment;
 import com.santt4na.health_check.entity.Doctor;
 import com.santt4na.health_check.entity.Patient;
+import com.santt4na.health_check.entity.Schedule;
 import com.santt4na.health_check.enums.AppointmentStatus;
-import com.santt4na.health_check.exception.RequiredObjectIsNullException;
+import com.santt4na.health_check.enums.CancelledBy;
+import com.santt4na.health_check.exception.BusinessException;
 import com.santt4na.health_check.exception.ResourceNotFoundException;
 import com.santt4na.health_check.mapper.AppointmentMapper;
-import com.santt4na.health_check.mapper.DoctorMapper;
-import com.santt4na.health_check.mapper.PatientMapper;
+import com.santt4na.health_check.mapper.ScheduleMapper;
 import com.santt4na.health_check.repository.AppointmentRepository;
 import com.santt4na.health_check.repository.DoctorRepository;
 import com.santt4na.health_check.repository.PatientRepository;
+import com.santt4na.health_check.repository.ScheduleRepository;
 import com.santt4na.health_check.service.AppointmentService;
 import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -33,102 +37,197 @@ public class AppointmentServiceImpl implements AppointmentService {
 	private static final Logger auditLogger = LoggerFactory.getLogger("audit");
 	
 	@Autowired
-	private AppointmentMapper mapperAppointment;
+	private AppointmentMapper appointmentMapper;
 	
 	@Autowired
-	private DoctorMapper mapperDoctor;
+	private ScheduleMapper scheduleMapper;
 	
 	@Autowired
-	private PatientMapper mapperPatient;
+	private AppointmentRepository appointmentRepository;
 	
 	@Autowired
-	private AppointmentRepository repositoryAppointment;
+	private ScheduleRepository scheduleRepository;
 	
 	@Autowired
-	private DoctorRepository repositoryDoctor;
+	private DoctorRepository doctorRepository;
 	
 	@Autowired
-	private PatientRepository repositoryPatient;
+	private PatientRepository patientRepository;
 	
 	@Override
-	public AppointmentResponseDTO createAppointment(AppointmentRequestDTO dto) {
-		return null;
-	}
-	
-	@Override
-	public AppointmentResponseDTO updateAppointment(Long id, AppointmentRequestDTO dto) {
-		return null;
-	}
-	
 	@Transactional
-	@Override
-	public void cancelAppointment(Long id, String description) {
-		logger.info("Canceled Appointment by ID: {}", id);
-		Appointment canceled = repositoryAppointment.findById(id)
-			.orElseThrow(()-> new ResourceNotFoundException("Cancel Appointment!"));
+	public AppointmentResponseDTO createAppointment(AppointmentRequestDTO dto) {
 		
-		if (!StringUtils.hasText(description)) {
-			throw new RequiredObjectIsNullException("Cancellation reason cannot be null or empty");
+		if (dto.patientId() == null) {
+			throw new IllegalArgumentException("Patient ID is required");
+		}
+		if (dto.doctorId() == null) {
+			throw new IllegalArgumentException("Doctor ID is required");
+		}
+		if (dto.scheduleId() == null) {
+			throw new IllegalArgumentException("Schedule ID is required");
 		}
 		
-		canceled.setReason(description);
-		canceled.setStatus(AppointmentStatus.CANCELED);
-	
-		repositoryAppointment.save(canceled);
-		auditLogger.info("Audit: Appointment Canceled with ID {}", id);
+		Doctor doctor = doctorRepository.findById(dto.doctorId())
+			.orElseThrow(() -> new ResourceNotFoundException("Doctor not found"));
+		
+		Patient patient = patientRepository.findById(dto.patientId())
+			.orElseThrow(() -> new ResourceNotFoundException("Patient not found"));
+		
+		Schedule schedule = scheduleRepository.findById(dto.scheduleId())
+			.orElseThrow(() -> new ResourceNotFoundException("Schedule not found"));
+		
+		if (!dto.appointmentDate().isEqual(schedule.getStartTime())) {
+			throw new BusinessException("A data do agendamento deve coincidir com o início do horário marcado");
+		}
+		
+		if (doctor == null || patient == null) {
+			throw new ResourceNotFoundException("Required entities not found");
+		}
+		
+		schedule.setAvailable(false);
+		scheduleRepository.save(schedule);
+		
+		Appointment appointment = appointmentMapper.requestToEntity(dto);
+		appointment.setDoctor(doctor);
+		appointment.setPatient(patient);
+		appointment.setSchedule(schedule);
+		appointment.setStatus(AppointmentStatus.PENDING);
+		appointment.setDuration(dto.duration());
+		
+		Appointment saved = appointmentRepository.save(appointment);
+		return appointmentMapper.responseToDto(saved);
 	}
 	
-	@Transactional
 	@Override
+	@Transactional
+	public AppointmentResponseDTO updateAppointment(Long id, AppointmentUpdateDTO dto) {
+		Appointment existing = appointmentRepository.findById(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found"));
+		
+		if (dto.appointmentDate() != null) {
+			existing.setAppointmentDate(dto.appointmentDate());
+		}
+		if (dto.duration() != null) {
+			existing.setDuration(dto.duration());
+		}
+		if (dto.reason() != null) {
+			existing.setReason(dto.reason());
+		}
+		if (dto.status() != null) {
+			existing.setStatus(dto.status());
+		}
+		
+		Appointment updated = appointmentRepository.save(existing);
+		return appointmentMapper.responseToDto(updated);
+	}
+	
+	@Override
+	@Transactional
+	public void cancelAppointment(Long id, String reason) {
+		Appointment appointment = appointmentRepository.findById(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found"));
+		
+		appointment.setStatus(AppointmentStatus.CANCELED);
+		appointment.setReason(reason);
+		
+		Schedule schedule = appointment.getSchedule();
+		schedule.setAvailable(true);
+		scheduleRepository.save(schedule);
+		
+		appointmentRepository.save(appointment);
+	}
+	
+	@Override
+	@Transactional
 	public AppointmentResponseDTO findByIdAppointment(Long id) {
-		
-		logger.info("Fetching Appointment by ID: {}", id);
-		Appointment searchAppointment = repositoryAppointment.findById(id)
-			.orElseThrow(()-> new ResourceNotFoundException("Appointment not found !"));
-		
-		return mapperAppointment.responseToDto(searchAppointment);
+		Appointment appointment = appointmentRepository.findByIdWithDetails(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found"));
+		return appointmentMapper.responseToDto(appointment);
 	}
 	
-	@Transactional
 	@Override
+	@Transactional
 	public List<AppointmentResponseDTO> findAllAppointment() {
-		
-		logger.info("List All Appointments");
-		auditLogger.info("Audit: List All Appointments");
-		
-		List<Appointment> appointments = repositoryAppointment.findAll();
-		return appointments.stream().map(mapperAppointment::responseToDto).collect(Collectors.toList());
+		return appointmentRepository.findAllWithDetails().stream()
+			.map(appointmentMapper::responseToDto)
+			.toList();
 	}
 	
 	@Override
-	public List<AppointmentResponseDTO> findByDoctor(Long doctorId) {
-		return List.of();
-	}
-	
 	@Transactional
-	@Override
 	public List<AppointmentResponseDTO> getDoctorAppointments(Long doctorId) {
-		
-		logger.info("Find Appointments by doctor");
-		auditLogger.info("Audit: Find Appointments by doctor");
-		
-		Doctor doctorAppointment = repositoryDoctor.findById(doctorId)
-			.orElseThrow(()-> new ResourceNotFoundException("Doctor not found with ID: " + doctorId));
-		
-		List<Appointment> appointments = doctorAppointment.getAppointments();
-		return mapperAppointment.responseListToDto(appointments);
+		return appointmentRepository.findByDoctor_Id(doctorId).stream()
+			.map(appointmentMapper::responseToDto)
+			.collect(Collectors.toList());
 	}
 	
-	@Transactional
 	@Override
+	@Transactional
 	public List<AppointmentResponseDTO> getPatientAppointments(Long patientId) {
-		logger.info("Find Appointments by patient");
-		auditLogger.info("Audit: Find Appointments by patient");
+		return appointmentRepository.findByPatient_Id(patientId).stream()
+			.map(appointmentMapper::responseToDto)
+			.collect(Collectors.toList());
+	}
+	
+	@Override
+	@Transactional
+	public AppointmentResponseDTO confirmAppointment(Long id) {
 		
-		Patient patientAppointment = repositoryPatient.findById(patientId)
-			.orElseThrow(()-> new ResourceNotFoundException("Doctor not found with ID: " + patientId));
+		Appointment appointment = appointmentRepository.findById(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found with ID: " + id));
 		
-		List<Appointment> appointments = patientAppointment.getAppointments();
-		return mapperAppointment.responseListToDto(appointments);
+		appointment.setStatus(AppointmentStatus.SCHEDULED);
+		appointment.setConfirmedAt(LocalDateTime.now());
+		Appointment confirmed = appointmentRepository.save(appointment);
+		
+		auditLogger.info("Appointment confirmed with ID {}", id);
+		return appointmentMapper.responseToDto(confirmed);
+	}
+	
+	@Override
+	@Transactional
+	public AppointmentResponseDTO cancelAppointmentByDoctor(Long id, String reason) {
+		Appointment appointment = appointmentRepository.findById(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found with ID: " + id));
+		appointment.setStatus(AppointmentStatus.CANCELED);
+		appointment.setCancelledBy(CancelledBy.DOCTOR);
+		appointment.setReason(reason);
+		
+		Schedule schedule = appointment.getSchedule();
+		schedule.setAvailable(true);
+		scheduleRepository.save(schedule);
+		
+		Appointment canceled = appointmentRepository.save(appointment);
+		auditLogger.info("Appointment canceled by doctor with ID {}", id);
+		return appointmentMapper.responseToDto(canceled);
+	}
+	
+	@Override
+	@Transactional
+	public AppointmentResponseDTO cancelAppointmentByPatient(Long id, String reason) {
+		
+		Appointment appointment = appointmentRepository.findById(id)
+			.orElseThrow(() -> new ResourceNotFoundException("Appointment not found with ID: " + id));
+		
+		appointment.setStatus(AppointmentStatus.CANCELED);
+		appointment.setCancelledBy(CancelledBy.PATIENT);
+		appointment.setReason(reason);
+		
+		Schedule schedule = appointment.getSchedule();
+		schedule.setAvailable(true);
+		scheduleRepository.save(schedule);
+		
+		Appointment canceled = appointmentRepository.save(appointment);
+		auditLogger.info("Appointment canceled by patient with ID {}", id);
+		return appointmentMapper.responseToDto(canceled);
+	}
+	
+	@Override
+	@Transactional
+	public List<ScheduleResponseDTO> getAvailableSchedules(Long doctorId) {
+		return scheduleRepository.findByDoctorIdAndAvailableTrue(doctorId).stream()
+			.map(scheduleMapper::responseDto)
+			.collect(Collectors.toList());
 	}
 }
